add packages filter, push, sort, update once

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "utilise.extend": "*",
     "utilise.falsy": "*",
     "utilise.file": "*",
+    "utilise.filter": "*",
     "utilise.first": "*",
     "utilise.flatten": "*",
     "utilise.fn": "*",
@@ -82,6 +83,7 @@
     "utilise.prepend": "*",
     "utilise.promise": "*",
     "utilise.proxy": "*",
+    "utilise.push": "*",
     "utilise.raw": "*",
     "utilise.rebind": "*",
     "utilise.replace": "*",
@@ -89,6 +91,7 @@
     "utilise.sall": "*",
     "utilise.sel": "*",
     "utilise.send": "*",
+    "utilise.sort": "*",
     "utilise.split": "*",
     "utilise.str": "*",
     "utilise.to": "*",
