--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "utilise.append": "*",
     "utilise.args": "*",
     "utilise.attr": "*",
+    "utilise.az": "*",
     "utilise.body": "*",
     "utilise.by": "*",
     "utilise.chainable": "*",
@@ -58,6 +59,7 @@
     "utilise.from": "*",
     "utilise.grep": "*",
     "utilise.group": "*",
+    "utilise.gt": "*",
     "utilise.has": "*",
     "utilise.header": "*",
     "utilise.identity": "*",
@@ -71,6 +73,7 @@
     "utilise.link": "*",
     "utilise.lo": "*",
     "utilise.log": "*",
+    "utilise.lt": "*",
     "utilise.mo": "*",
     "utilise.noop": "*",
     "utilise.not": "*",
