--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "utilise.mo": "*",
     "utilise.noop": "*",
     "utilise.not": "*",
+    "utilise.nullify": "*",
     "utilise.once": "*",
     "utilise.owner": "*",
     "utilise.parse": "*",
