add time and hashcode

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "utilise.group": "*",
     "utilise.gt": "*",
     "utilise.has": "*",
+    "utilise.hashcode": "*",
     "utilise.header": "*",
     "utilise.identity": "*",
     "utilise.includes": "*",
@@ -98,6 +99,7 @@
     "utilise.sort": "*",
     "utilise.split": "*",
     "utilise.str": "*",
+    "utilise.time": "*",
     "utilise.to": "*",
     "utilise.unique": "*",
     "utilise.values": "*",
