--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bundle": "browserify tmp.js -o utilise.js -i d3 -i colors -s utilise && rm tmp.js",
     "minify": "uglifyjs utilise.js -m -c drop_console,dead_code -d client=true -o utilise.min.js",
     "gzip": "gzip -c utilise.min.js > utilise.min.js.gz",
-    "build": "node alias.js && npm run bundle && npm run minify && npm run gzip",
+    "build": "npm update && node alias.js && npm run bundle && npm run minify && npm run gzip",
     "version": "npm run build && git add -A",
     "postversion": "git push && git push --tags"
   },
