add defaults, slice

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "utilise.datum": "*",
     "utilise.debounce": "*",
     "utilise.def": "*",
+    "utilise.defaults": "*",
     "utilise.el": "*",
     "utilise.emitterify": "*",
     "utilise.err": "*",
@@ -96,6 +97,7 @@
     "utilise.sall": "*",
     "utilise.sel": "*",
     "utilise.send": "*",
+    "utilise.slice": "*",
     "utilise.sort": "*",
     "utilise.split": "*",
     "utilise.str": "*",
