add escape, stripws, tdraw

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "utilise.el": "*",
     "utilise.emitterify": "*",
     "utilise.err": "*",
+    "utilise.escape": "*",
     "utilise.extend": "*",
     "utilise.falsy": "*",
     "utilise.file": "*",
@@ -101,6 +102,8 @@
     "utilise.sort": "*",
     "utilise.split": "*",
     "utilise.str": "*",
+    "utilise.stripws": "*",
+    "utilise.tdraw": "*",
     "utilise.time": "*",
     "utilise.to": "*",
     "utilise.unique": "*",
