update emitterify, header, join, key, push, ready, remove, overwrite, pop, set, update

--- a/package.json
+++ b/package.json
@@ -82,10 +82,12 @@
     "utilise.not": "*",
     "utilise.nullify": "*",
     "utilise.once": "*",
+    "utilise.overwrite": "*",
     "utilise.owner": "*",
     "utilise.parse": "*",
     "utilise.pause": "*",
     "utilise.perf": "*",
+    "utilise.pop": "*",
     "utilise.prepend": "*",
     "utilise.promise": "*",
     "utilise.proxy": "*",
@@ -98,6 +100,7 @@
     "utilise.sall": "*",
     "utilise.sel": "*",
     "utilise.send": "*",
+    "utilise.set": "*",
     "utilise.slice": "*",
     "utilise.sort": "*",
     "utilise.split": "*",
@@ -107,6 +110,7 @@
     "utilise.time": "*",
     "utilise.to": "*",
     "utilise.unique": "*",
+    "utilise.update": "*",
     "utilise.values": "*",
     "utilise.via": "*",
     "utilise.wait": "*",
