update once, th

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "utilise.str": "*",
     "utilise.stripws": "*",
     "utilise.tdraw": "*",
+    "utilise.th": "*",
     "utilise.time": "*",
     "utilise.to": "*",
     "utilise.unique": "*",
