--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bundle": "browserify tmp.js -o utilise.js -i d3 -i colors -s utilise && rm tmp.js",
     "minify": "uglifyjs utilise.js -m -c drop_console,dead_code -d client=true -o utilise.min.js",
     "gzip": "gzip -c utilise.min.js > utilise.min.js.gz",
-    "build": "npm update && node alias.js && npm run bundle && npm run minify && npm run gzip",
+    "rebuild": "node alias.js && npm run bundle && npm run minify && npm run gzip",
+    "build": "npm update && npm run rebuild",
     "version": "npm run build && git add -A",
     "postversion": "git push && git push --tags"
   },
@@ -47,6 +48,7 @@
     "utilise.debounce": "*",
     "utilise.def": "*",
     "utilise.defaults": "*",
+    "utilise.done": "*",
     "utilise.el": "*",
     "utilise.emitterify": "*",
     "utilise.err": "*",
