--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "main": "index.js",
   "browser": {
+    "pause": false,
+    "send": false,
+    "file": false,
+    "via": false,
     "./pause": false,
     "./send": false,
     "./file": false,
