--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "utilise.colorfill": "*",
     "utilise.copy": "*",
     "utilise.datum": "*",
-    "utilise.debounce": "*",
     "utilise.deb": "*",
+    "utilise.debounce": "*",
     "utilise.def": "*",
     "utilise.defaults": "*",
     "utilise.delay": "*",
@@ -77,7 +77,7 @@
     "utilise.includes": "*",
     "utilise.is": "*",
     "utilise.join": "*",
-    "utilise.key": "*",
+    "utilise.key": "0.0.9",
     "utilise.keys": "*",
     "utilise.last": "*",
     "utilise.lo": "*",
@@ -90,8 +90,8 @@
     "utilise.overwrite": "*",
     "utilise.owner": "*",
     "utilise.parse": "*",
-    "utilise.pause": "*",
     "utilise.patch": "*",
+    "utilise.pause": "*",
     "utilise.perf": "*",
     "utilise.pop": "*",
     "utilise.prepend": "*",
