--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "license": "pemrouz.mit-license.org",
   "dependencies": {
     "colors": "^1.1.2",
-    "through": "^2.3.8"
+    "through": "^2.3.8",
+    "uglify-es": "^3.0.25"
   },
   "devDependencies": {
     "browserify": "^10.2.1",
@@ -37,7 +38,7 @@
     "rollup": "^0.34.1",
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^1.7.1",
-    "uglify-js": "^2.4.23",
+    "uglify-js": "^2.8.29",
     "utilise.all": "*",
     "utilise.append": "*",
     "utilise.args": "*",
