--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "rollup": "^0.34.1",
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^1.7.1",
-    "uglify-es": "^3.1.5",
+    "uglify-es": "^3.1.9",
     "utilise.all": "*",
     "utilise.append": "*",
     "utilise.args": "*",
@@ -57,7 +57,7 @@
     "utilise.delay": "*",
     "utilise.done": "*",
     "utilise.el": "*",
-    "utilise.emitterify": "*",
+    "utilise.emitterify": "^1.3.2",
     "utilise.err": "*",
     "utilise.escape": "*",
     "utilise.extend": "*",
