--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "rollup": "^0.34.1",
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^1.7.1",
-    "uglify-es": "^3.1.9",
+    "uglify-es": "^3.2.0",
     "utilise.all": "*",
     "utilise.append": "*",
     "utilise.args": "*",
@@ -109,7 +109,7 @@
     "utilise.split": "*",
     "utilise.str": "*",
     "utilise.stripws": "*",
-    "utilise.tdraw": "*",
+    "utilise.tdraw": "0.0.6",
     "utilise.th": "*",
     "utilise.time": "*",
     "utilise.to": "*",
