--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "utilise.parse": "*",
     "utilise.patch": "*",
     "utilise.pause": "*",
-    "utilise.perf": "*",
+    "utilise.perf": "^1.0.0",
     "utilise.pop": "*",
     "utilise.prepend": "*",
     "utilise.promise": "*",
