--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "rollup": "^0.34.1",
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^1.7.1",
-    "uglify-es": "^3.2.1",
+    "uglify-es": "^3.3.10",
     "utilise.all": "*",
     "utilise.append": "*",
     "utilise.args": "*",
@@ -82,6 +82,7 @@
     "utilise.last": "*",
     "utilise.lo": "*",
     "utilise.log": "*",
+    "utilise.merge": "*",
     "utilise.mo": "*",
     "utilise.noop": "*",
     "utilise.not": "*",
