--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   "author": "Pedram Emrouznejad (https://github.com/pemrouz)",
   "license": "pemrouz.mit-license.org",
   "dependencies": {
-    "through": "^2.3.8"
+    "through": "^2.3.8",
+    "colors": "^1.1.2"
   },
   "devDependencies": {
     "browserify": "^10.2.1",
-    "colors": "^1.1.2",
     "rollup": "^0.34.1",
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^1.7.1",
