--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "utilise.delay": "*",
     "utilise.done": "*",
     "utilise.el": "*",
-    "utilise.emitterify": "*",
+    "utilise.emitterify": "^1.7.2",
     "utilise.err": "*",
     "utilise.escape": "*",
     "utilise.extend": "*",
